log
Wed 20 Mar 2024 07:36:54 PM UTC: 
 exercises.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘cadena_balanceada’:
exercises.c:90:21: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
   90 |       Stack* pila = createStack();
      |                     ^~~~~~~~~~~
      |                     create_stack
exercises.c:90:21: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
At top level:
exercises.c:89:7: error: ‘cadena_balanceada’ defined but not used [-Werror=unused-function]
   89 |   int cadena_balanceada(char* cadena) {
      |       ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
61258bb
Wed 20 Mar 2024 07:37:55 PM UTC: 
 exercises.c | 27 +--------------------------
 1 file changed, 1 insertion(+), 26 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:89:11: error: expected ‘;’ before ‘:’ token
   89 |   return 0:
      |           ^
      |           ;
Compilation failed
961e8e0
Wed 20 Mar 2024 07:38:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
537dcdc
Wed 20 Mar 2024 07:52:01 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
8c1c2bc
Wed 20 Mar 2024 07:54:19 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:8: error: ‘data’ undeclared (first use in this function)
   51 |   free(data);
      |        ^~~~
exercises.c:51:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
dd3edd0
Wed 20 Mar 2024 07:55:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:9: error: ‘data’ undeclared (first use in this function)
   51 |   free(*data);
      |         ^~~~
exercises.c:51:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ea4e545
Wed 20 Mar 2024 07:56:37 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|3
total_score: 20/70
f1e9aaa
Wed 20 Mar 2024 08:03:23 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
cfa750a
